[tool.poetry]
name = "gitlab-plumber"
version = "0.1.0"
description = ""
authors = ["staticf0x <staticf0x@pm.me>"]
license = "MIT"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
python-gitlab = "^4.4.0"
click = "^8.1.3"
rich = "^13.7.0"
arrow = "^1.3.0"


[tool.poetry.group.dev.dependencies]
devtools = {extras = ["pygments"], version = "^0.12.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
