[project]
name = "gitlab-plumber"
version = "0.1.0"
description = ""
authors = [
    { name = "staticf0x", email = "staticf0x@pm.me" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arrow>=1.3.0",
    "click>=8.1.7",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "python-gitlab>=5.1.0",
    "rich>=13.9.4",
]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
python-gitlab = "^4.4.0"
click = "^8.1.3"
rich = "^13.7.0"
arrow = "^1.3.0"
pandas = "^2.2.1"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN101",
    "T201",  # print()
    "D203",  # 1 blank line required before class docstring (incompatible with D211)
    "D213",  # Multi-line docstring summary should start at the second line (incompatible with D212)
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "devtools[pygments]>=0.12.2",
    "isort>=5.13.2",
    "ruff>=0.8.2",
]
